after a bad dream last night about getting hired at a department store and getting bogged down by customers within my first hour, i tackled implementing the mobile media query. i utitilized the "escape" method, which, after applying it to the sections, i think is pretty neat and makes me feel better about this less stuff. i applied it to content-section, text-content, img content, inverse-content, content-destination, content-pick, destination, and button. i used align-items and column on most of these things and made them 90% width. i am currently trying to fix with width of the top h2 and p with it but it doesn't seem to be working. i finally successfully removed the text-decoration from the nav a and changed them to the color given in variables.less. oh yeah, and last night i was able to make the page's top border expand across the entire width of the body by placing its mixin in header.

--- a/css/index.css
+++ b/css/index.css
@@ -179,6 +179,11 @@ header .mainNav {
   justify-content: space-between;
   align-items: center;
 }
+@media (max-width: 500px) {
+  header .mainNav {
+    flex-direction: column;
+  }
+}
 header h1 {
   color: #212529;
   font-size: 4rem;
@@ -193,6 +198,10 @@ header nav {
   justify-content: space-evenly;
   align-items: center;
 }
+header nav a {
+  text-decoration: none;
+  color: #212529;
+}
 .footer {
   width: 100%;
   border-top: 2px dashed silver;
@@ -204,12 +213,23 @@ header nav {
   font-size: 1.6rem;
   padding: 20px;
 }
+@media (max-width: 500px) {
+  .home .welcome {
+    width: 90%;
+  }
+}
 .home .content-section {
   margin: 30px 0;
   margin-top: 0px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+}
+@media (max-width: 500px) {
+  .home .content-section {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 .home .content-section .welcome {
   margin-top: 20px;
@@ -220,9 +240,19 @@ header nav {
   width: 48%;
   padding-right: 1%;
 }
+@media (max-width: 500px) {
+  .home .content-section .text-content {
+    width: 90%;
+  }
+}
 .home .content-section .img-content {
   width: 48%;
   padding-left: 1%;
+}
+@media (max-width: 500px) {
+  .home .content-section .img-content {
+    width: 90%;
+  }
 }
 .home .content-section .img-content img {
   border-radius: 10px;
@@ -230,6 +260,12 @@ header nav {
 .home .inverse-content {
   padding-bottom: 30px;
   border-bottom: 2px dashed #C0C0C0;
+}
+@media (max-width: 500px) {
+  .home .inverse-content {
+    display: flex;
+    flex-direction: column-reverse;
+  }
 }
 .home .inverse-content .text-content {
   padding-left: 1%;
@@ -243,6 +279,11 @@ header nav {
   width: 75%;
   margin: 0 auto 30px;
 }
+@media (max-width: 500px) {
+  .home .content-destination {
+    width: 90%;
+  }
+}
 .home .content-destination img {
   border-radius: 10px;
 }
@@ -252,13 +293,29 @@ header nav {
   display: flex;
   justify-content: space-between;
 }
+@media (max-width: 500px) {
+  .home .content-pick {
+    flex-direction: column;
+    align-items: center;
+  }
+}
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+@media (max-width: 500px) {
+  .home .content-pick .destination {
+    width: 90%;
+  }
 }
 .home button {
   background-color: #17A2B8;
   width: 50%;
   height: 40px;
   border-radius: 10px;
+}
+@media (max-width: 500px) {
+  .home button {
+    width: 100%;
+  }
 }
