--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,11 +1,21 @@
 .home {
 
+  .welcome {
+    @media @mobile {
+      width: 90%;
+    }
+  }
+
   .content-section {
     margin: 30px 0;
     margin-top: 0px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    @media @mobile {
+      flex-direction: column;
+      align-items: center;
+    }
 
    .welcome {
      margin-top: 20px;
@@ -16,11 +26,19 @@
     .text-content {
       width: 48%;
       padding-right: 1%;
+      @media @mobile {
+        width: 90%;
+      }
     }
 
     .img-content {
       width: 48%;
       padding-left: 1%;
+      @media @mobile {
+        width: 90%;
+      
+
+      }
 
       img {
         border-radius: 10px;
@@ -32,6 +50,10 @@
   .inverse-content {
     padding-bottom: 30px;
     border-bottom: 2px dashed @navigation-border;
+    @media @mobile {
+      display: flex;
+      flex-direction: column-reverse;
+    }
 
     .text-content {
       padding-left: 1%;
@@ -47,6 +69,9 @@
   .content-destination {
     width: 75%;
     margin: 0 auto 30px;
+    @media @mobile {
+      width: 90%;
+    }
 
     img {
       border-radius: 10px;
@@ -58,13 +83,23 @@
     border-top: 2px dashed @navigation-border;
     display: flex;
     justify-content: space-between;
+    @media @mobile {
+      flex-direction: column;
+      align-items: center;
+    }
 
     .destination {
       width: 30%;
       margin-bottom: 30px;
+      @media @mobile {
+        width: 90%;
+      }
     }
   }
   button {
-    .buttonMaker(@button-bg)
+    .buttonMaker(@button-bg);
+    @media @mobile {
+      width: 100%;
+    }
   }
 }// home
